add auth add mongo write concern
