# src/resources/swagger.yaml
@@ -38,8 +38,37 @@ paths:
             application/json:
               schema:
                 type: object
+  /protected:
+    get:
+      tags:
+        - Tag
+      summary: get something
+      responses:
+        '404':
+          description: Requested resource not found
+        '400':
+          description: Invalid parameters or body request
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+        '500':
+          $ref: '#/components/responses/ServerError'
+        '200':
+          description: everything is ok
 
 components:
+  responses:
+    ServiceUnavailableError:
+      description: Endpoint service unavailable
+    UnauthorizedError:
+      description: Access token is missing or invalid
+    ServerError:
+      description: Server error
+    ForbiddenError:
+      description: Access token has incorrect scopes
+    NotFoundError:
+      description: Requested resource was not found
   securitySchemes:
     bearerAuth:
       type: http
